--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-futures-timer = "0.3"
+futures-timer = "*"
 delay_timer = "*"
 futures = "0.3"
+tokio = {version = "1", features = ["full"]}
+mini-redis = "*"
